SubBt/force-app/main/default/objects/Dynamic_Prequal_Setting__mdt/Dynamic_Prequal_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Dynamic Prequal Setting</label>
    <pluralLabel>Dynamic Prequal Settings</pluralLabel>
</CustomObject>