SubBt/force-app/main/default/objects/Dynamic_Prequal_Setting__mdt/fields/Header_1__c.field-meta.xml
<CustomField>
    <fullName>Header_1__c</fullName>
    <label>Header 1</label>
    <type>TextArea</type>
</CustomField>