SubBt/force-app/main/default/objects/Dynamic_Prequal_Setting__mdt/fields/Header_2__c.field-meta.xml
<CustomField>
    <fullName>Header_2__c</fullName>
    <label>Header 2</label>
    <type>TextArea</type>
</CustomField>