SubBt/force-app/main/default/objects/Dynamic_Prequal_Setting__mdt/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <label>Header</label>
    <type>TextArea</type>
</CustomField>