SubBt/force-app/main/default/objects/Dynamic_Prequal_Setting__mdt/fields/Height_Width__c.field-meta.xml
<CustomField>
    <fullName>Height_Width__c</fullName>
    <label>Height &amp; Width</label>
    <type>TextArea</type>
</CustomField>